# semble_rs

./: Cargo.toml  README.ko.md  README.md
docs/: benchmark_100.md  eval_set_100.json  test.md
src/: bm25.rs  chunking.rs  digest.rs  encoder.rs  file_walker.rs  filter.rs  graph.rs  lib.rs  main.rs  outline.rs  search.rs  stats.rs  tokens.rs  tree.rs  utils.rs
src/index/: create.rs  mod.rs
src/ranking/: boosting.rs
